fixed register button being too small for the text

--- a/src/pages/reg/reg.css
+++ b/src/pages/reg/reg.css
@@ -20,5 +20,5 @@
 }
 
 .regForm {
-    max-width: 150px;
+    max-width: 250px;
 }
